# bigpicture

./: .env  .gitmodules  README.md  SPATIAL_ENCODING_CHANGES.md  environment-bigpicture.yaml  environment-wilds.yaml  pyproject.toml  spec-file-wilds.txt  stats.json
results/branches/: best_artifacts.csv  best_artifacts.html
results/deit/: best_artifacts.csv  best_artifacts.html
results/densenet/: best_artifacts.csv  best_artifacts.html
results/late_fusion/: backbone.html  concat_domain_classification.html  concat_fusion_out_dim.html  d3g_hyperparameter_study.html  fusion.html  label_smoothing_ablation.html  normalization_ablation.html  summary.html
results/multsim/: fusion_comparison.html  gradient_ablation.html  label_smoothing.html  multsim_ablation.html  normalization_ablation.html  relu_ablation.html  spatial_encodings.html  summary.html
src/: __init__.py
src/bigpicture.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dataset/: __init__.py  fmow_multiscale_dataset.py
src/dataset_creation/: bounding_box.py  check_image_quality.py  check_image_stats.py  check_landsat_range.py  compute_stats.py  display_preprocessed_images.py  display_spatial_encoding.py  download_landsat.py  download_landsat8.py  download_landsat8_geotiff.py  download_landsat8_subset.py  download_landsat_subset.py  download_preprocessed_subset.py  download_quality_check.py  metadata_extension.py  recompute_stats.py  save_fullres_landsat.py  save_transformed_images.py  translate_geotiff_to_png.py
src/models/: __init__.py  dense_net_121.py  late_fusion.py  schedulers.py  (+10 more)
(+1352 files in other folders)
