[project]
name = "bigpicture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "ee>=0.2",
    "einops>=0.8.2",
    "fiona>=1.10.1",
    "geopy>=2.4.1",
    "great-tables>=0.21.0",
    "hydra-core>=1.3.2",
    "huggingface-hub>=1.6.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "omegaconf>=2.3.0",
    "pandarallel>=1.6.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.1.post1",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "rioxarray>=0.22.0",
    "shapely>=2.1.2",
    "stackstac>=0.5.0",
    "sympy>=1.14.0",
    "timm>=1.0.25",
    "torch>=2.7.0",
    "torchgeo>=0.9.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
    "welford-torch>=0.2.5",
    "wilds>=2.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
